# a-term

./: .coderabbit.yaml  .env.example  .gitignore  .index.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MOBILE_VERIFICATION.md  NOTICE  README.md  RELEASING.md  SECURITY.md  alembic.ini  node_modules  playwright-cli.json  project.identity.json  pyproject.toml  renovate.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: ci.yml  release.yml
a_term/: __init__.py  __main__.py  auth.py  branding.py  config.py  constants.py  logging_config.py  main.py
a_term/api/: __init__.py  a_term.py  agent.py  agent_tools.py  auth.py  diagnostics.py  files.py  notes.py  pane_files.py  pane_responses.py  panes.py  projects.py  sessions.py
a_term/services/: _pty_reader.py  _sync_scheduler.py  agent_service.py  binary_protocol.py  file_browser.py  lifecycle.py  maintenance.py  metrics.py  project_catalog.py  pty_manager.py  recording.py  session_broker.py  session_close.py  summitflow_client.py  upload_cleanup.py
a_term/storage/: __init__.py  agent_tools.py  connection.py  maintenance_runs.py  note_versions.py  notes.py  notes_helpers.py  notes_query.py  notes_write.py  pane_core.py  pane_layout.py  pane_sessions.py  panes.py  project_settings.py  projects.py  sessions.py
a_term/utils/: __init__.py
alembic/: env.py
alembic/versions/: 0eb6530a7ab7_add_local_projects_registry_table.py  363fd0ed6429_rename_legacy_schema_to_a_term.py  363fd0ed6429_rename_legacy_schema_to_aterm.py  5c128471688d_rename_aterm_schema_to_a_term.py  5cdb3c9dc987_add_a_term_notes_tables.py  62d8f8c5f2b1_add_hermes_agent_tool_defaults.py  6cf65b9ca525_add_detached_a_term_panes.py  6cf65b9ca525_add_detached_aterm_panes.py  6cf65b9ca525_add_detached_terminal_panes.py  88a6d1a8fba4_add_check_constraints_for_state_machines.py  (+10 more)
aterm/: __main__.py  branding.py  config.py  logging_config.py  main.py  rate_limit.py
docs/: remote-access.md
frontend/: TESTING_WORKFLOWS.md  biome.json  middleware.test.ts  middleware.ts  next.config.test.ts  next.config.ts  package.json  pnpm-lock.yaml  proxy.test.ts  proxy.ts  tsconfig.json  vitest.config.ts
scripts/: bump-version.sh  fix-carrier-drop.sh  harden-lan-access.sh  install-android-emulator.sh  install-local-tmux.sh  install.sh  managed-postgres.sh  mobile-verification.sh  playwright-windows-setup.ps1  restore.sh  setup-caddy-lan-proxy.sh  setup-router-dns.sh  shutdown.sh  start.sh  status.sh  tclaude  tcodex  truecolor-test.sh  tsession  verify-pane-layouts.sh
terminal/: config.py  constants.py  logging_config.py  main.py  rate_limit.py
tests/: conftest.py  test_a_term_session_storage.py  test_agent_api.py  test_agent_service.py  test_agent_tools_api.py  test_app_version.py  test_aterm_session_storage.py  test_auth_api.py  test_backpressure.py  test_binary_protocol.py  test_branding.py  test_bump_version_script.py  test_config.py  test_diagnostics.py  test_file_browser.py  test_files_api.py  test_frontend_package_integrity.py  test_health.py  test_install_scripts.py  test_internal_maintenance_api.py  test_maintenance.py  test_metrics.py  test_notes_api.py  test_notes_scope_normalization.py  test_pane_files_api.py  test_pane_storage.py  test_panes_api.py  test_project_branding_generated.py  test_project_index_sync.py  test_projects_api.py  test_pty_reader.py  test_recording.py  test_scrollback_diff.py  test_scrollback_pager.py  test_scrollback_sync.py  test_session_broker.py  test_session_broker_cli.py  test_session_close.py  test_session_validation.py  test_sessions_api.py  (+8 more)
(+559 files in other folders)
